--- a/LearnToCode/Components/Layout/NavMenu.razor
+++ b/LearnToCode/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<header class="absolute inset-x-0 top-0 z-50">
+﻿<header class="absolute inset-x-0 top-0 z-50 delay-[400ms] duration-[600ms] taos:[transform:translate3d(0,-200px,0)_scale(0.6)] taos:opacity-0" data-taos-offset="500">
     <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex lg:flex-1">
             <NavLink href="/" class="-m-1.5 p-1.5">
