--- a/LearnToCode/Components/Pages/Account/Account.razor
+++ b/LearnToCode/Components/Pages/Account/Account.razor
@@ -19,7 +19,7 @@ else
                 </h2>
             </div>
             <div class="flex flex-col lg:flex-row gap-6 w-full">
-                <div class="w-1/2 flex flex-col gap-6">
+                <div class="w-full lg:w-1/2 flex flex-col gap-6">
                     @*
                         Profile Picture & Name
                     *@
@@ -71,6 +71,69 @@ else
                     </div>
 
                     @*
+                        Friends Accounts
+                    *@
+                    <div class="bg-white w-full shadow-md rounded-lg gap-6 p-8 justify-start items-start flex flex-col">
+                        <h4 class="font-semibold text-2xl w-full">
+                            Friends
+                        </h4>
+
+                        <div class="flex flex-col gap-6 divide-y divide-gray-200 w-full">
+                            <div class="flex flex-row justify-between items-center w-full">
+                                <div class="flex items-center w-full">
+                                    <div class="relative w-full">
+                                        <input type="text" placeholder="Search friends" class="p-2 rounded-lg bg-gray-100 border border-gray-400 w-full pl-10" />
+                                        <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 text-gray-400">
+                                                <path fill="currentColor" d="M21.71 20.29l-5.32-5.32A7.93 7.93 0 0 0 18 10a8 8 0 1 0-8 8c1.73 0 3.31-.55 4.62-1.47l5.32 5.32a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM4 10a6 6 0 1 1 6 6 6 6 0 0 1-6-6z"/>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <button class="bg-grey-200 shadow-md rounded-full h-10 w-10 flex items-center justify-center ml-2">
+                                        <span class="text-gray-800 font-bold text-xl">+</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="flex flex-row justify-between items-center w-full py-2 gap-4">
+                                <div class="min-w-10 max-w-10 h-10 flex justify-center items-center bg-blue-200 rounded-full text-xl font-semibold">
+                                    JD
+                                </div>
+                                <div class="flex flex-col w-full">
+                                    <h4>John Doe</h4>
+                                    <a href="#" class="text-blue-400 hover:underline hover:underline-offset-2">Last seen: 2 min ago...</a>
+                                </div>
+                                <button class="border border-gray-600 hover:bg-gray-100 text-gray-600 font-bold py-2 px-4 rounded-lg">
+                                    Remove
+                                </button>
+                            </div>
+                            <div class="flex flex-row justify-between items-center w-full py-2 gap-4">
+                                <div class="min-w-10 max-w-10 h-10 flex justify-center items-center bg-green-200 rounded-full text-xl font-semibold">
+                                    PB
+                                </div>
+                                <div class="flex flex-col w-full">
+                                    <h4>Peanut Butter</h4>
+                                    <a href="#" class="text-blue-400 hover:underline hover:underline-offset-2">Last seen: 3 days ago...</a>
+                                </div>
+                                <button class="border border-gray-600 hover:bg-gray-100 text-gray-600 font-bold py-2 px-4 rounded-lg">
+                                    Remove
+                                </button>
+                            </div>
+                        </div>
+                        <div class="flex flex-col md:flex-row justify-between mt-4 w-full gap-2">
+                            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">
+                                Save Settings
+                            </button>
+
+                            <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg flex items-center gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="h-6 w-6 rounded-full fill-white">
+                                    <path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>
+                                </svg>
+                                Add Friend
+                            </button>
+                        </div>
+                    </div>
+
+                    @*
                         Social Media Accounts
                     *@
                     <div class="bg-white w-full shadow-md rounded-lg gap-6 p-8 justify-start items-start flex flex-col">
@@ -79,9 +142,9 @@ else
                         </h4>
 
                         <div class="flex flex-col gap-6 divide-y divide-gray-200 w-full">
-                            <div class="flex flex-row justify-between w-full py-2 gap-4">
+                            <div class="flex flex-row justify-between items-center w-full py-2 gap-4 h-full">
                                 <div class="w-10 h-10">
-                                    <img src="Images/Icons/github.svg" alt="Social Logo" />
+                                    <img src="Images/Icons/github.svg" class="min-w-10 max-w-10 h-10" alt="Social Logo" />
                                 </div>
                                 <div class="flex flex-col w-full">
                                     <h4>Github account</h4>
@@ -91,9 +154,9 @@ else
                                     Disconnect
                                 </button>
                             </div>
-                            <div class="flex flex-row justify-between w-full py-2 gap-4 items-center h-full">
+                            <div class="flex flex-row justify-between items-center w-full py-2 gap-4 items-center h-full">
                                 <div class="w-10 h-10">
-                                    <img src="Images/Icons/github.svg" alt="Social Logo" />
+                                    <img src="Images/Icons/github.svg" class="min-w-10 max-w-10 h-10" alt="Social Logo" />
                                 </div>
                                 <div class="flex flex-col w-full">
                                     <h4>Github account</h4>
@@ -111,7 +174,7 @@ else
 
                             <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="h-6 w-6 rounded-full fill-white">
-                                    <path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>
+                                    <path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
                                 </svg>
                                 New social account
                             </button>
