--- a/LearnToCode/Components/App.razor
+++ b/LearnToCode/Components/App.razor
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="DeveloperHub.styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/site.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script>document.documentElement.classList.add('js')</script>
+
     <HeadOutlet />
 </head>
 
 <body>
 <Routes />
+<script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
 </body>
 </html>
