--- a/LearnToCode/Components/Pages/Home.razor
+++ b/LearnToCode/Components/Pages/Home.razor
@@ -9,16 +9,16 @@
         </div>
         <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
             <div class="hidden sm:mb-8 sm:flex sm:justify-center">
-                <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+                <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20 delay-[800ms] duration-[600ms] taos:[transform:translate3d(0,-200px,0)_scale(0.6)] taos:opacity-0" data-taos-offset="500">
                     Announcing our new Calendar! <a href="#" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
                 </div>
             </div>
             <div class="text-center">
-                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">The Developer Hub</h1>
-                <p class="mt-6 text-lg leading-8 text-gray-600">The one-stop shop for everything a developer needs. From forums to tutorials and much, much more...</p>
+                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">The Developer Hub</h1>
+                <p class="mt-6 text-lg leading-8 text-gray-600 delay-[200ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">The one-stop shop for everything a developer needs. From forums to tutorials and much, much more...</p>
                 <div class="mt-10 flex items-center justify-center gap-x-6">
-                    <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get started</a>
-                    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
+                    <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 delay-[300ms] duration-[600ms] taos:[transform:translate3d(-200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">Get started</a>
+                    <a href="#" class="text-sm font-semibold leading-6 text-gray-900 delay-[400ms] duration-[600ms] taos:[transform:translate3d(200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">Learn more <span aria-hidden="true">→</span></a>
                 </div>
             </div>
         </div>
@@ -38,24 +38,24 @@
     </div>
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:mx-0">
-            <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">What is The Developer Hub</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-300">The Developer Hub is a collection of useful tools and functionality that are helpful for every developer.</p>
+            <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl duration-[600ms] taos:[transform:translate3d(-200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">What is The Developer Hub</h2>
+            <p class="mt-6 text-lg leading-8 text-gray-300 delay-[200ms] duration-[600ms] taos:[transform:translate3d(-200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">The Developer Hub is a collection of useful tools and functionality that are helpful for every developer.</p>
         </div>
         <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
             <dl class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4">
-                <div class="flex flex-col-reverse justify-center items-center">
+                <div class="flex flex-col-reverse justify-center items-center delay-[400ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base leading-7 text-gray-300">Tutorials</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">15+</dd>
                 </div>
-                <div class="flex flex-col-reverse justify-center items-center">
+                <div class="flex flex-col-reverse justify-center items-center delay-[500ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base leading-7 text-gray-300">Applications</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">10+</dd>
                 </div>
-                <div class="flex flex-col-reverse justify-center items-center">
+                <div class="flex flex-col-reverse justify-center items-center delay-[600ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base leading-7 text-gray-300">Lines of code</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">100,000+</dd>
                 </div>
-                <div class="flex flex-col-reverse justify-center items-center">
+                <div class="flex flex-col-reverse justify-center items-center delay-[700ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base leading-7 text-gray-300">Hours saved</dt>
                     <dd class="text-2xl font-bold leading-9 tracking-tight text-white">Unlimited</dd>
                 </div>
@@ -66,14 +66,14 @@
 
 <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-2xl lg:text-center">
+        <div class="mx-auto max-w-2xl lg:text-center delay-[300ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
             <h2 class="text-base font-semibold leading-7 text-indigo-600">Work Faster</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everything you need to be a developer</p>
             <p class="mt-6 text-lg leading-8 text-gray-600">Ranging from built in calendar and scheduler, to tutorials and a built-in forum. With lots of tutorials you are sure to find everything you need at our one-stop shop.</p>
         </div>
         <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
             <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
-                <div class="relative pl-16">
+                <div class="relative pl-16 delay-[200ms] duration-[600ms] taos:[transform:translate3d(-200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
                         <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
                             <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -84,7 +84,7 @@
                     </dt>
                     <dd class="mt-2 text-base leading-7 text-gray-600">Manage your schedule effectively with our built-in scheduling feature. Keep track of your appointments, meetings, and deadlines.</dd>
                 </div>
-                <div class="relative pl-16">
+                <div class="relative pl-16 delay-[400ms] duration-[600ms] taos:[transform:translate3d(200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
                         <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
                             <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -95,7 +95,7 @@
                     </dt>
                     <dd class="mt-2 text-base leading-7 text-gray-600">Learn new skills and concepts through our interactive tutorials. Get hands-on experience and practice coding in real-time.</dd>
                 </div>
-                <div class="relative pl-16">
+                <div class="relative pl-16 delay-[600ms] duration-[600ms] taos:[transform:translate3d(-200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
                         <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
                             <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -106,7 +106,7 @@
                     </dt>
                     <dd class="mt-2 text-base leading-7 text-gray-600">Connect with other developers in our community forums. Share ideas, ask questions, and collaborate on projects.</dd>
                 </div>
-                <div class="relative pl-16">
+                <div class="relative pl-16 delay-[800ms] duration-[600ms] taos:[transform:translate3d(200px,0,0)_scale(0.6)] taos:opacity-0" data-taos-offset="400">
                     <dt class="text-base font-semibold leading-7 text-gray-900">
                         <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
                             <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -126,11 +126,11 @@
     <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
         <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
     </div>
-    <div class="mx-auto max-w-2xl text-center">
+    <div class="mx-auto max-w-2xl text-center delay-[300ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
         <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact</h2>
         <p class="mt-2 text-lg leading-8 text-gray-600">Have a suggestion or query, don't hesitate to ask.</p>
     </div>
-    <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
+    <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20 delay-[300ms] duration-[600ms] taos:scale-[0.6] taos:opacity-0" data-taos-offset="400">
         <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
             <div>
                 <label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First name</label>
@@ -199,3 +199,5 @@
         </div>
     </form>
 </div>
+
+<Footer></Footer>
