Added Login page

--- a/LearnToCode/Components/Pages/Home.razor
+++ b/LearnToCode/Components/Pages/Home.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
 <PageTitle>Home</PageTitle>
-<NavMenu />
+<div class="delay-[400ms] duration-[600ms] taos:[transform:translate3d(0,-200px,0)_scale(0.6)] taos:opacity-0" data-taos-offset="500">
+    <NavMenu />
+</div>
 <div class="bg-white">
     <div class="relative isolate px-6 pt-14 lg:px-8">
         <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
